--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -49,8 +49,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets/Scripts/PlayerController.cs" />
+    <Compile Include="Assets/Scripts/UIManager.cs" />
+    <Compile Include="Assets/Scripts/Collision.cs" />
     <Compile Include="Assets/Scripts/ObstacleSpawner.cs" />
     <Compile Include="Assets/TutorialInfo/Scripts/Readme.cs" />
+    <Compile Include="Assets/Scripts/GameManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
